--- a/themes/hexo-theme-snippet/layout/_partial/copyright.ejs
+++ b/themes/hexo-theme-snippet/layout/_partial/copyright.ejs
@@ -7,11 +7,11 @@
             <div class="col-sm-12">
                 <span>Copyright &copy; <%= theme.since %>
                 </span> |
-                <span>
+                <!-- <span>
                     Powered by <a href="//hexo.io" class="copyright-links" target="_blank" rel="nofollow">Hexo</a>
-                </span> |
+                </span> | -->
                 <span>
-                    Theme by <a href="//github.com/shenliyang/hexo-theme-snippet.git" class="copyright-links" target="_blank" rel="nofollow">Snippet</a>
+                    作者 <a href="https://www.baidu.com" class="copyright-links" target="_blank" rel="nofollow">暮雪寒寒</a>
                 </span>
             </div>
         </div>
